<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Library</string>

    <string name="root_internal_storage">Internal Storage</string>
    <string name="root_external_storage">External Storage</string>
    <string name="root_bluetooth">Bluetooth</string>
    <string name="root_downloads">Downloads</string>
    <string name="root_image">Image</string>
    <string name="root_audio">Audio</string>
    <string name="root_video">Video</string>
    <string name="root_documents">Documents</string>
    <string name="root_application">Applications</string>

    <!-- Size unit, displayed in a button next to an attachment [CHAR LIMIT=5] -->
    <string name="bytes"><xliff:g id="count">%s</xliff:g> B
    </string>
    <!-- Size unit, displayed in a button next to an attachment [CHAR LIMIT=5] -->
    <string name="kilobytes"><xliff:g id="count">%s</xliff:g> KB
    </string>
    <!-- Size unit, displayed in a button next to an attachment  [CHAR LIMIT=5] -->
    <string name="megabytes"><xliff:g id="count">%s</xliff:g> MB
    </string>
    <!-- Size unit, displayed in a button next to an attachment  [CHAR LIMIT=5] -->
    <string name="gigabytes"><xliff:g id="count">%s</xliff:g> GB
    </string>
    <!-- A string used to show user that currently documents are not sorted in any given order. [CHAR_LIMIT=30] -->
    <string name="not_sorted">Not sorted</string>
    <!-- Table header for file name [CHAR_LIMIT=24] -->
    <string name="sort_dimension_name">Name</string>
    <!-- Table header for metadata of downloaded files, such as download source and progress. [CHAR_LIMIT=24] -->
    <string name="sort_dimension_summary">Summary</string>
    <!-- Table header for file type. [CHAR_LIMIT=12] -->
    <string name="sort_dimension_file_type">Type</string>
    <!-- Table header for file size. [CHAR_LIMIT=12] -->
    <string name="sort_dimension_size">Size</string>
    <!-- Table header for last modified time. [CHAR_LIMIT=18] -->
    <string name="sort_dimension_date">Modified</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_un_all">UnSelect All</string>


    <!--
     Status indicating that the download has been queued to start in the future.  Appears for an
     individual item in the download list.  [CHAR LIMIT=24]
-->
    <string name="download_queued">Queued</string>
    <!--
         Status indicating that the system is currently downloading the file.  Appears for an
         individual item in the download list.  [CHAR LIMIT=24]
    -->
    <string name="download_running">In progress</string>
    <!--
         Status indicating that the download has ended without completing successfully.  Appears for
         an individual item in the download list.  [CHAR LIMIT=24]
    -->
    <string name="download_error">Unsuccessful</string>

    <!-- Representation of download progress percentage when running. [CHAR LIMIT=24] -->
    <string name="download_running_percent">In progress, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>

    <string name="directory_counts">%s items</string>

    <string name="task_delete">Deleting</string>
    <string name="task_copy">Copying</string>
    <string name="task_move">Moving</string>
    <string name="task_result_fail">Operation failure</string>
    <string name="task_result_part_fail">Some operation failure</string>
    <string name="task_result_success">Operation success</string>
    <string name="task_result_cancel">Canceled</string>
    <string name="cancel">Cancel</string>

    <string name="task_progress_desc">Progress %1d in %2d</string>
    <string name="open_file_fail">Can\'t open file</string>
</resources>
